Fix pagniator content alignment

--- a/frontend/src/components/Table/paginatorPassThrough.scss
+++ b/frontend/src/components/Table/paginatorPassThrough.scss
@@ -10,9 +10,17 @@
 
 .table-paginator-current {
     margin-right: auto;
-    text-align: left;
+    padding-left: 1rem;
 }
 
 .table-paginator-root .p-select {
     min-width: 6rem;
+    display: flex;
+    align-items: center;
+}
+
+.table-paginator-root .p-select-label {
+    margin: 0;
+    line-height: 1;
+    text-align: center;
 }
